fix [NM] stylefix

--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -3,8 +3,10 @@
 
     <item
         android:id="@+id/nav_premiere"
-        android:icon="@drawable/premier"
-    android:title="Premier" />
+        android:icon="@drawable/premiere"
+    android:title="Premier"
+        
+        />
 
     <item
         android:id="@+id/nav_spain"
